<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginBottom="16dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.CadastroActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Cadastro"
        android:textStyle="bold"
        android:textSize="25sp"/>


    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edtCadEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtEmail"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/edtCadSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtSenha"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/edtCadConfirmSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senhaConfirme"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCadastrar"/>

</LinearLayout>